Score Changing added Score fixed width implemented (when the value was changing, the width was changing with it, thus the whole layout jumping) TODO: edit, remove, persist to localStorage

--- a/src/components/Comment/Comment.module.scss
+++ b/src/components/Comment/Comment.module.scss
@@ -37,18 +37,19 @@
       flex: 0 1 4rem;
       gap: 1rem;
 
-      padding: 1.6rem;
+      padding: 1.6rem 0;
       border-radius: 0.8rem;
 
       align-self: start;
       justify-self: center;
+
       background-color: variables.$color-very-light-gray;
 
       @include mixins.respond(tab-port) {
         grid-row: 4;
         justify-self: start;
         flex-direction: row;
-        gap: 1.5rem;
+        gap: 0.75rem;
         align-items: center;
         padding: 1rem;
       }
@@ -72,6 +73,17 @@
       &__value {
         color: variables.$color-moderate-blue;
         font-weight: 900;
+        min-width: 5rem;
+        text-align: center;
+
+        @include mixins.respond(tab-port) {
+          min-width: 2rem;
+        }
+
+        @include mixins.respond(phone) {
+          min-width: 1.7rem;
+          font-size: 1.4rem;
+        }
       }
     }
 
